--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.open-in-view = false
 #spring.jpa.hibernate.ddl-auto = create
 spring.mvc.hiddenmethod.filter.enabled=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
